# LLM-Self-Explanation-IB-Bilingual

./: .gitignore  LLama3_1_70b_api.ipynb  README.md  cohere-sample-explaination.ipynb  compare_sentiment.csv  environment.yml  k.txt  key.txt  models.txt  pyproject.toml  requirements.txt  sentiment_analysis_results.csv  sentiment_analysis_results_with_top3.csv  sentiment_counterfactual.ipynb  test_cns.ipynb  tester.ipynb
configs/bert-score/: bertscore_en.yaml  bertscore_fa.yaml
configs/evaluate/: claude_eval.yaml
configs/similarity/: claude_sim_en.yaml  claude_sim_fa.yaml
data/: README.md
data/archive/: pre_results_compelete_claude_3_haiku_arc_challenge_tmp.csv  pre_results_compelete_gemini_2.0_flash_arc_challenge_tmp.csv  pre_results_compelete_llama_4_maverik_arc_challenge_tmp.csv
data/interim/: README.md
docs/: ARC_DATASET_README.md
examples/: arc_dataset_demo.py
experiments/: README.md
notebooks/: 03_experiments.ipynb  05_agent.ipynb  README.md
papers/: Models Overview — Cohere.html
prompt_template/: question_answering  translate_to_fa
results/: README.md
scripts/: README.md  calc_bertscore.py  calc_similarity.py  calc_similarity_clean.py  clause_eval.py  concise_rewrites_40.csv  concise_rewrites_60.csv  concise_rewrites_70.csv  concise_rewrites_80.csv  conciseness_eval.py  conciseness_fa_eval.py  conciseness_fa_gen.py  conciseness_gen.py  eval_concise_en.py  eval_concise_fa.py  evaluate_model.py  gen_base_en.py  gen_base_fa.py  gen_concise_en.py  gen_concise_fa.py  results_qwen3-1.7b_masked.csv  t.ipynb
src/: README.md
tests/: README.md
(+899 files in other folders)
